--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "allaskereso_portal": {
+    "allaskereso-portal": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/allaskereso_portal",
+            "outputPath": "dist/allaskereso-portal",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -60,10 +60,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "allaskereso_portal:build:production"
+              "buildTarget": "allaskereso-portal:build:production"
             },
             "development": {
-              "buildTarget": "allaskereso_portal:build:development"
+              "buildTarget": "allaskereso-portal:build:development"
             }
           },
           "defaultConfiguration": "development"
